--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     background-color: gray;
+
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: solid;
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: solid;
+    margin: 0;
+    padding: 0;
+}
+
+.hero {
+    border: solid;
+    display: flex;
+}
+
+.information {
+    display: flex;
+    border: solid;
+
+}
+
+.quote {
+    display: flex;
+    border: solid;
+}
+
+.sign-up {
+    display: flex;
+    border: solid;
+}
+
+.footer {
+    border: solid;
 }
