--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
     margin: 0;
@@ -95,12 +97,12 @@ a {
     justify-content: space-between;
     flex-direction: column;
     padding: 25px 100px;
-    gap: 20px; 
+    gap: 20px;
 }
 
 .information h3 {
     font-size: 36px;
-    font-weight: 900;
+    font-weight: 900; 
     color: #1F2937;
     padding: 0;
     margin: 0;
@@ -129,11 +131,26 @@ a {
     flex-direction: column;
 }
 
-
-
-
 .quote {
-    display: flex; border: solid;
+    background-color: #E5E7EB;
+    display: flex; 
+    padding: 55px 100px;
+    flex-direction: column;
+}
+
+.quote-body {
+    font-style: italic;
+    font-size: 36px;
+    padding: 0;
+    margin: 0;
+}
+
+.quote-credit {
+    display: flex;
+    justify-content: end;
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
 }
 
 .sign-up {
