--- a/styles.css
+++ b/styles.css
@@ -76,13 +76,14 @@ a {
     padding: 0;
 }
 
-.hero-button {
+button {
     background-color: #3882F6;
-    color: #F9FAF8;
-    padding: 3px 15px;
-    border-radius: 5px;
-    margin-top: 10px;
     font-weight: bold;
+    font-size: larger;
+    color: #F9FAF8;
+    padding: 5px 20px;
+    border-radius: 10px;
+    margin-top: 10px;
     border: none;
 }
 
@@ -168,7 +169,37 @@ a {
 
 .sign-up {
     display: flex;
+    border: none;
+    align-items: center;
+    justify-content: space-around;
+    margin: 55px 100px;
+    padding: 25px 0;
+    border-radius: 20px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+}
+
+.sign-up-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+
+}
+
+.sign-up-left h2 {
+    padding: 0;
+    margin: 0;
+}
+
+.p-sign-up {
+    padding: 0;
+    margin: 0;
+}
+
+#sign-up-button {
     border: solid;
+
 }
 
 .footer {
